<?xml version="1.0"?>
<package format="2">
  <name>mohou_ros</name>
  <version>0.0.0</version>
  <description>mohou_ros package</description>
  <maintainer email="h-ishida@jsk.imi.i.u-tokyo.ac.jp">Hirokazu Ishdia</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>pr2_mechanism_msgs</depend>
  <depend>pr2_controllers_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
</package>
