<?xml version="1.0"?>
<package format="3">
  <name>mohou_ros</name>
  <version>0.0.0</version>
  <description>mohou_ros package</description>
  <maintainer email="h-ishida@jsk.imi.i.u-tokyo.ac.jp">Hirokazu Ishdia</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>
  <!-- for melodic -->
  <build_depend condition="$ROS_PYTHON_VERSION == 2">cv_bridge_python3</build_depend>
  <!-- for noetic -->
  <build_depend condition="$ROS_PYTHON_VERSION == 3">cv_bridge</build_depend>
  <depend>pr2_mechanism_msgs</depend>
  <depend>pr2_controllers_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>cv_bridge</depend> -->
  <exec_depend>python3-rospkg-modules</exec_depend>
  <exec_depend>python3-empy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>

  <depend>ffmpeg</depend>
  <depend>zip</depend>
  <depend>suitesparse</depend>  <!-- actually it's dep of cvxopt of scikit-robot -->

  <test_depend>rostest</test_depend>
</package>
